# Exact-Synthesis

./: CMakeLists.txt  Globals.cpp  Globals.hpp  Makefile  README.md  SO6.cpp  SO6.hpp  SO6_iterator.hpp  Z2.cpp  Z2.hpp  main.cpp  main.out  main2.cpp  pattern.cpp  pattern.hpp  test_so6.cpp  tmp  uint72_t.hpp  utils.hpp  valgrind_output.txt
data/: T1.txt  T2.txt  T3.txt  T4.txt  T5.txt
patterns/: testfile.txt
