Here is the contents of the `CMakeLists.txt` file:

```
cmake_minimum_required(VERSION 3.10)
project(project-name)

# Add the necessary configurations for building and running tests using gtest
add_subdirectory(tests)

# Add your project source files and dependencies here
# ...

# Add your project executable here
# ...
```

Please let me know if you need any further assistance.